--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -37,6 +37,7 @@ div.ChannelName
 .Times {
     margin: 0;
     float: left;
+    text-transform: uppercase;
 }
 
 .Ttle {
@@ -184,7 +185,7 @@ div#TemperatureGroup {
 div#EpgDays {
     width: 20%;
     height: 5%;
-    top: 37%;
+    top: 38%;
     position: fixed;
     font-size: 22px;
     left: 2%;
@@ -362,7 +363,7 @@ div#ChannelRow7 {
     text-transform: uppercase;
     height: 19%;
     width: 100%;
-    margin: 1%;
+    margin-bottom: 1.5%;
 }
 
 /***************************** [INFO] *****************************/
@@ -603,7 +604,7 @@ div.PvrHeader {
     text-align: center;
     top: 9%;
     font-size: 25px;
-    border-radius: 6x;
+    border-radius: 6px;
 }
 
 div#CurrentPvrOption {
