--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -100,8 +100,8 @@ div#EpgHeader {
 div#EpgChannels {
     position: fixed;
     width: 22%;
-    height: 38.5%;
-    bottom: 19%;
+    height: 40%;
+    bottom: 19.5%;
     left: 1.7%;
     border-radius: 6px;
     
@@ -110,8 +110,8 @@ div#EpgChannels {
 div#EpgPrograms {
     position: fixed;
     width: 76%;
-    height: 38.8%;
-    bottom: 18.5%;
+    height: 40%;
+    bottom: 19.5%;
     right: 2%;
     z-index: 1;
 }
@@ -132,7 +132,7 @@ div#EpgHours {
     width: 76%;
     height: 5%;
     right: 2%;
-    top: 37%;
+    top: 35%;
     background-size: 100% 100%;
 }
 
@@ -185,7 +185,7 @@ div#TemperatureGroup {
 div#EpgDays {
     width: 20%;
     height: 5%;
-    top: 38%;
+    top: 35%;
     position: fixed;
     font-size: 22px;
     left: 2%;
@@ -348,8 +348,9 @@ div#ProgramRow5,
 div#ProgramRow6,
 div#ProgramRow7 {
     width: 100%;
-    height: 20%;
+    height: 19.3%;
     font-weight: bold;
+    margin-bottom: .3%;
 }
 
 div#ChannelRow1,
