--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -29,11 +29,6 @@ div.ChannelName
 
 /***************************** [EPG] *****************************/
 
-#PvrWeatherIcon{
-    position: fixed;
-    bottom: 9.5%;
-    left: 24%;
-}
 .Times {
     margin: 0;
     float: left;
@@ -565,26 +560,40 @@ div#PvrNow {
 
 
 div#PvrWeather{
-    width: 60%;
+    width: 100%;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    text-align: right;
+    text-align: center;
     float: left;
 }
 
 div#PvrLateral {
     width: 20%;
-    background: #0a6ebd;
     position: fixed;
-    height: 14%;
-    bottom: 5%;
+    height: 12%;
+    bottom: 3%;
     left: 4.5%;
+}
+
+div#Temperatures {
+    float: left;
+    width: 65%;
+    text-align: right;
+}
+
+div#PvrIcon {
+    float: right;
+    width: 32%;
+    text-align: left;
 }
 
 div#PvrDate{
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     text-align: center;
+    width: 100%;
+    float: right;
+    margin-top: 3%;
 }
 
 div#PvrContainer {
