--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -53,12 +53,12 @@ div#EpgContainer {
 
 div#EpgNowAiring {
     color: #fff;
-    font-family: arial-rounded;
+    font-family: gotham;
 }
 
 div#EpgTitle {
     color: #dfbe5e;
-    font-family: Gotham;
+    font-family: gotham;
 }
 
 div#EpgRating,
@@ -83,7 +83,7 @@ div#EpgStars {
 
 
 div#PvrDate{
-    font-family: arial-rounded;
+    font-family: gotham;
     color: #fff;
 }
 
@@ -127,7 +127,7 @@ div.Time{
 }
 
 div#EpgDate {
-    font-family: arial-rounded;
+    font-family: gotham;
 }
 
 div#EpgProgramInfo {
@@ -170,7 +170,7 @@ div.HourRow
 {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     font-size: 20px;
-    font-family: Arial Rounded MT Bold;
+    font-family: Gotham;
     font-weight: bold;
 }
 
