--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -113,7 +113,7 @@ div#EpgDays {
 
 div#PvrProgramTitle {
     color: #dfbe5e;
-    font-family: Gotham;
+    font-family: gotham;
 }
 
 div.ChannelName,
@@ -165,12 +165,19 @@ div#ProgramFocus {
 }
 
 p.ChannelNumber,
-p.ChannelName,
-div.HourRow 
+p.ChannelName
 {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     font-size: 20px;
-    font-family: Gotham;
+    font-family: gotham;
+    font-weight: bold;
+}
+
+div.HourRow
+{
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-size: 20px;
+    font-family: arial-rounded;
     font-weight: bold;
 }
 
