--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -706,21 +706,21 @@ div#PvrDeleteOptions {
 }
 
 div#PvrInfo{
-    width: 62%;
-    height: 23%;
+    width: 69%;
+    height: 21%;
     position: fixed;
-    bottom: 13%;
-    left: 33%;
+    bottom: 15%;
+    right: 2%;
     border-radius: 6px;
 }
 
 
 
 div#PvrProgramTitle {
-    width: 60%;
+    width: 68%;
     height: 4%;
     margin-top:0.5%;
-    margin-left: 1%;
+    margin-left: 0.5%;
     position: fixed;
     overflow: hidden;
     white-space: nowrap;
@@ -732,7 +732,7 @@ div#PvrProgramDate{
     width: 40%;
     height: 4%;
     margin-top: 3%;
-    margin-left: 1%;
+    margin-left: 0.5%;
     position: fixed;
     overflow: hidden;
     font-size: 18px;
@@ -740,25 +740,26 @@ div#PvrProgramDate{
 }
 
 div#PvrProgramDescription {
-    width: 60%;
-    height: 13%;
-    margin-top: 5.5%;
+    width: 68%;
+    height: 11%;
+    margin-top: 5%;
     margin-left: 1%;
     position: fixed;
     overflow: hidden;
     text-align: left;
     font-size: 18px;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    line-height: 29px;
 }
 
 /* Info grabador (disco) */
 
 div#PvrDiskInfo {
-    width: 62%;
+    width: 69%;
     height: 6%;
     position: fixed;
-    right: 5%;
-    top: 89%;
+    right: 2%;
+    bottom: 8%;
     font-size: 20px;
 }
 
