--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -491,6 +491,16 @@ div#BarPosition {
     font-size: 23px;
 }
 
+div.BarPosition {
+    border-radius: 6px;
+    height: 100%;
+    top: 2%;
+    width: 100%;
+    z-index: 1;
+    text-align: right;
+    font-size: 23px;
+}
+
 div#BarStatus {
     right: 0;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
