--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -273,6 +273,10 @@ div#BarPosition {
     color: #fff;
 }
 
+div.BarPosition {
+    background: rgba(255, 255, 255, 0.6);
+}
+
 div#BarStatus {
     color: #e3c15a;
 }
