Actualizacion EPG y PVR

--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -473,39 +473,32 @@ div#BarStatus {
 }
 
 div#BarContainer{
-    height: 4.5%;
-    width: 90%;
-    margin-left: 5%;
+    height: 4%;
+    width: 92%;
+    right: 2.5%;
     top: 2%;
-    border-radius: 4px;
     display: none;
+    background: rgba(255,255,255,0.6);
+    border-radius: 6px;
+    box-shadow: 2px 2px 3px rgba(0,0,0,0.5);
 }
 
 div#BarPosition {
     border-radius: 6px;
     height: 100%;
-    top: 2%;
     width: 0%;
     z-index: 1;
     text-align: right;
     font-size: 23px;
 }
 
-div.BarPosition {
-    border-radius: 6px;
-    height: 100%;
-    top: 2%;
-    width: 100%;
-    z-index: 1;
-    text-align: right;
-    font-size: 23px;
-}
-
 div#BarStatus {
-    right: 0;
+    left: 2%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     text-align: center;
-    top: 100%;
+    width: 3%;
+    font-size: 25px;
+    top: 1%;
 }
 
 #BarStatus p {
