--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -468,19 +468,20 @@ div#EpgSerie {
 div#BarContainer,
 div#BarPosition,
 div#BarTotal,
+div#BarTimes,
 div#BarStatus {
     position: absolute;
 }
 
 div#BarContainer{
-    height: 4%;
+    height: 3.33%;
     width: 92%;
-    right: 2.5%;
+    right: 3%;
     top: 2%;
+    border-radius: 4px;
     display: none;
-    background: rgba(255,255,255,0.6);
-    border-radius: 6px;
-    box-shadow: 2px 2px 3px rgba(0,0,0,0.5);
+    background-color: rgba(255,255,255,0.6);
+    box-shadow: 3px 4px 4px rgba(0,0,0,0.5);
 }
 
 div#BarPosition {
@@ -489,14 +490,23 @@ div#BarPosition {
     width: 0%;
     z-index: 1;
     text-align: right;
-    font-size: 23px;
+}
+
+div#BarTimes {
+    right: 3%;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    text-align: center;
+    top: 5%;
+    color: #fff;
+    font-size: 21px;
 }
 
 div#BarStatus {
-    right: 0;
+    left: 2.5%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     text-align: center;
-    top: 100%;
+    font-size: 23px;
+    top: 1%;
 }
 
 #BarStatus p {
