--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -204,7 +204,7 @@ div#RecordPlayOptions,
 div#RecordingManualOptions,
 div#RecordingOptions {
     background-image: url('DarkBlue/square.png');
-    box-shadow: 6px 6px rgba(0,0,0,0.5);
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5);
     background-size: 100% 100%;
 }
 
