--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -495,10 +495,11 @@ div#BarPosition {
 div#BarTimes {
     right: 3%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    text-align: center;
     top: 5%;
     color: #fff;
     font-size: 21px;
+    text-align: left;
+    width: 10%;
 }
 
 div#BarStatus {
