Actualizacion EPG y PVR

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -505,7 +505,7 @@ The above copyright notice and this permission notice shall be included in all c
         DevicesTable = $('#DevicesList').DataTable({
             data: DevicesList,
             columns: [
-                { title: 'Id' },
+                { title: 'Id', "visible": false },
                 { title: 'Codigo locación' },
                 { title: 'Mac address' },
                 { title: 'Modelo' },
