--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -506,9 +506,10 @@ The above copyright notice and this permission notice shall be included in all c
             data: DevicesList,
             columns: [
                 { title: 'Id', "visible": false },
-                { title: 'Codigo locación' },
+                { title: 'Cuenta' },
                 { title: 'Mac address' },
                 { title: 'Modelo' },
+                { title: 'Canal en reproducción' },
                 { title: 'Ultima actualización' },
                 { title: 'Ultimo evento' },
                 { title: 'POWER' },
