Actualizacion EPG y PVR

--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -509,7 +509,7 @@ The above copyright notice and this permission notice shall be included in all c
                 { title: 'Cuenta' },
                 { title: 'Mac address' },
                 { title: 'Modelo' },
-                { title: 'Canal en reproducción' },
+                { title: 'En reproducción' },
                 { title: 'Ultima actualización' },
                 { title: 'Ultimo evento' },
                 { title: 'POWER' },
