--- a/Views/Layouts/Contents/Templates/Dashboard.html
+++ b/Views/Layouts/Contents/Templates/Dashboard.html
@@ -741,7 +741,7 @@ The above copyright notice and this permission notice shall be included in all c
             });
             $.ajax({
                 type: "POST",
-                url: SourceControllers +" Charts.php",s
+                url: SourceControllers +" Charts.php",
                 data: { 
                     Option    : 'ChannelsAverageTime',
                     From      : From,
