--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -781,16 +781,16 @@ div#UsedSize {
 }
 
 div.BarUsedSize {
-    width: 69%;
-    height: 4%;
+    width: 100%;
+    height: 70%;
     border-radius: 6px;
-    position: fixed;
+    position: absolute;
     z-index: 0;
 }
 
 div#BarUsedSize {
     z-index: 1;
-    position: fixed;
+    position: absolute;
     border-radius: 6px;
     text-align: center;
 }
