--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -390,7 +390,7 @@ div#EpgMainLogo {
 }
 
 div#EpgTitle {
-    font-size: 28px;
+    font-size: 26px;
     overflow: hidden;
     white-space: nowrap;
     padding-top: 2%;
@@ -549,20 +549,31 @@ div.RecordingOptionsButton {
 div#RecorderMessage {
     text-align: center;
     font-size: 35px;
+    margin: 2%;
 }
 
 div#PanelMessage {
-    width: 100%;
-    height: 7%;
+    width: 50%;
+    height: 25%;
     text-align: center;
     z-index: 1;
     position: fixed;
-    top: 0%;
+    top: 25%;
     display: none;
+    right: 25%;
+    box-shadow: 6px 6px 5px rgba(0,0,0,0.5);
+    border-radius: 6px;
 }
 
 div#MessageClose  {
-    font-size: 20px;
+    font-size: 43px;
+    bottom: 5%;
+    position: absolute;
+    width: 30%;
+    left: 35%;
+    border-radius: 6px;
+    text-shadow: 2px 2px 3px rgba(0,0,0,0.4);
+    box-shadow: 2px 2px 3px rgba(0,0,0,0.4);
 }
 
 /***************************** [ PVR DESIGN ] *****************************/
