--- a/Views/Styles/Themes/DarkBlue.css
+++ b/Views/Styles/Themes/DarkBlue.css
@@ -92,9 +92,13 @@ div.PvrHeader {
 }
 
 div#PanelMessage {
-    background-image: url('DarkBlue/info.png');
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-color: #128ba6;
+    font-family: arial-rounded;
+}
+
+div#MessageClose {
+    background: #dfbe5e;
+    color: #fff;
 }
 
 div#CurrentPvrOption {
