--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -469,6 +469,7 @@ div#BarContainer,
 div#BarPosition,
 div#BarTotal,
 div#BarTimes,
+div#BarDuration,
 div#BarStatus {
     position: absolute;
 }
@@ -493,6 +494,16 @@ div#BarPosition {
 }
 
 div#BarTimes {
+    right: 3%;
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    top: 5%;
+    color: #fff;
+    font-size: 21px;
+    text-align: left;
+    width: 10%;
+}
+
+div#BarDuration{
     right: 3%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     top: 5%;
