--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -506,8 +506,8 @@ div#BarTimes {
 div#BarDuration{
     right: 3%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    top: 5%;
-    color: #fff;
+    top: 2.5%;
+    color: #000;
     font-size: 21px;
     text-align: left;
     width: 10%;
