--- a/Views/Layouts/Tv/Styles/TvMin.css
+++ b/Views/Layouts/Tv/Styles/TvMin.css
@@ -494,6 +494,7 @@ div#BarPosition {
 }
 
 div#BarTimes {
+    right: 2%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     top: 5%;
     color: #fff;
@@ -503,6 +504,7 @@ div#BarTimes {
 }
 
 div#BarDuration{
+    right: 2%;
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     top: 1%;
     color: #000;
