--- a/Views/Styles/Themes/TvMin/DarkBlue.css
+++ b/Views/Styles/Themes/TvMin/DarkBlue.css
@@ -89,6 +89,17 @@ div#ProgramFocus {
     border: #d36363;
 }
 
+/********** SOMBRAS ***********/
+
+p.ChannelNumber,
+p.ChannelName,
+div.HourRow
+{
+    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+    font-size: 20px;
+    font-weight: bold;
+}
+
 /********** COLORES EN ELEMENTOS ***********/
 
 div#EpgStars,
@@ -136,26 +147,9 @@ div#TemperatureGroup {
     color: #0396a6;
 }
 
-
-
 .Program
 {
     outline: 1px solid rgb(42, 61, 71);
-}
-
-p.ChannelNumber,
-p.ChannelName
-{
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    font-size: 20px;
-    font-weight: bold;
-}
-
-div.HourRow
-{
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
-    font-size: 20px;
-    font-weight: bold;
 }
 
 /********** PVR ***********/
