--- a/Views/Layouts/Tv/Styles/TvModern.css
+++ b/Views/Layouts/Tv/Styles/TvModern.css
@@ -112,13 +112,12 @@ div#EpgPrograms {
 
 div#EpgProgramInfo {
     position: fixed;
-    width: 58%;
-    height: 26.3%;
-    top: 7%;
-    left: 28%;
-    border-radius: 6px;
-    border-style: solid;
-    box-shadow: 2px 2px 7px rgba(0,0,0,0.3);
+    width: 65.5%;
+    height: 29%;
+    top: 3%;
+    left: 31%;
+    box-shadow: 6px 6px 4px rgba(0,0,0,0.3);
+    padding: 0.5%;
 }
 
 div#EpgHours {
@@ -368,7 +367,7 @@ div.EpgLogo {
     width: 6%;
     height: 8%;
     top: 8%;
-    right: 14%;
+    right: 3%;
     overflow: hidden;
     background-position: center;
     background-size: contain;
@@ -390,11 +389,10 @@ div#EpgMainLogo {
 }
 
 div#EpgTitle {
-    font-size: 26px;
+    font-size: 25px;
     overflow: hidden;
     white-space: nowrap;
-    padding-top: 2%;
-    width: 90%;
+    width: 85%;
 }
 
 div#EpgDescription {
