--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -107,6 +107,10 @@ div.HourRow
 
 /********** COLORES EN ELEMENTOS ***********/
 
+div#EpgProgramInfo {
+    background: rgba(0,0,0,0.1);
+}
+
 div#EpgStars,
 div#PvrProgramTitle,
 .PvrChevronLeft,
