--- a/Views/Layouts/Tv/Styles/TvModern.css
+++ b/Views/Layouts/Tv/Styles/TvModern.css
@@ -80,9 +80,9 @@ div#EpgContainer {
 }
 
 #WeatherIcon {
-    top: 2%;
+    top: 3%;
     position: fixed;
-    right: 2%;
+    right: 3%;
 }
 
 div#EpgHeader {
@@ -154,8 +154,8 @@ div#EpgDate {
 div#EpgWeather {
     width: 10%;
     height: 5%;
-    top: 2.5%;
-    right: 2.5%;
+    top: 3.5%;
+    right: 3.5%;
     position: fixed;
     text-align: left;
 }
@@ -397,30 +397,30 @@ div#EpgTitle {
 
 div#EpgDescription {
     width: 58%;
-    height: 14%;
+    height: 20%;
     padding-top: 1%;
     position: fixed;
-    top: 18%;
+    top: 12%;
     overflow: hidden;
     text-align: justify;
     font-size: 20px;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     line-height: 35px;
+    font-weight: bold;
 }
 
 div#EpgTime {
     width: 15%;
     height: 5%;
     position: fixed;
-    top: 15%;
+    top: 9%;
 }
 
 div#EpgRating {
     width: 15%;
     height: 5%;
     position: fixed;
-    top: 15%;
-    left: 44%;
+    top: 9%;
+    left: 46%;
 }
 
 div#EpgRating,
