--- a/Views/Layouts/Tv/Styles/TvModern.css
+++ b/Views/Layouts/Tv/Styles/TvModern.css
@@ -94,10 +94,10 @@ div#EpgHeader {
 
 div#EpgChannels {
     position: fixed;
-    width: 20.3%;
+    width: 19%;
     height: 40%;
     bottom: 16%;
-    left: 1.7%;
+    left: 3%;
     border-radius: 6px;
 }
 
@@ -199,7 +199,7 @@ div#EpgDay {
 /***************************** Estilo BackgroundInfo *****************************/
 
 .ChannelImage {
-    width: 25%;
+    width: 22%;
     height: 100%;
     background-size: 75%;
     background-repeat: no-repeat;
@@ -288,7 +288,7 @@ div.Rating {
 /***************************** [CANALES] *****************************/
 
 p.ChannelName {
-    width: 75%;
+    width: 76%;
     height: 100%;
     float: right;
     margin: 0;
@@ -330,7 +330,8 @@ div.HourRow {
     height: 100%;
     line-height: 50px;
     background-size: 100% 100%;
-    text-align: left;
+    text-align: center;
+    text-align: center;
 }
 
 div#ProgramRow1,
