--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -166,6 +166,10 @@ div.RecordingOptionsButton {
     background: #2f414a;
 }
 
+#PvrLogoContainer {
+    display: none;
+}
+
 
 div.PvrOptionsButton,
 div.RecordingManualOptionsButton,
