Actualizacion EPG y PVR

--- a/Views/Layouts/Tv/Styles/TvModern.css
+++ b/Views/Layouts/Tv/Styles/TvModern.css
@@ -145,7 +145,7 @@ div#EpgNowAiring {
     height: 6%;
     position: fixed;
     padding-left: 3%;
-    padding-top: 2%;
+    padding-top: 3%;
     text-align: left;
     font-size: 20px;
     font-weight: bold;
@@ -156,9 +156,10 @@ div#EpgDate {
     height: 5%;
     position: fixed;
     left: 3%;
-    top: 6.5%;
+    top: 8.5%;
     text-align: left;
     font-size: 18px;
+    font-weight: bold;
 }
 
 div#EpgWeather {
